force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Lowest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lowest__c</fullName>
    <description>This field is optional. It is a roll-up field, and populated automatically by the lowest value in the &quot;LLC_BI__Low__c&quot; field on the Risk_Grade_Criteria__c object.</description>
    <label>Lowest</label>
    <summarizedField>LLC_BI__Risk_Grade_Criteria__c.LLC_BI__Low__c</summarizedField>
    <summaryForeignKey>LLC_BI__Risk_Grade_Criteria__c.LLC_BI__Risk_Grade_Factor__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>