force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Risk_Grade_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Grade_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is only populated automatically if the user is creating the risk grade factor from the risk grade group  This field specifies the risk grade group associated with the risk grade factor. Whenever a factor is associated with a group, it is used to calculate that specific group&apos;s risk grade.</description>
    <label>Risk Grade Group</label>
    <referenceTo>LLC_BI__Risk_Grade_Group__c</referenceTo>
    <relationshipLabel>Risk Grade Factors</relationshipLabel>
    <relationshipName>Risk_Grade_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>