force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is required. It must be manually populated. Qualitative results in a picklist displaying in the risk grade worksheet and utilizes values from the &quot;LLC_BI__Description__c&quot; (Qualitative Value) field on the Risk Grade Critieria object. Quantitative results in a text field displaying in the risk grade worksheet and utilizes values from the &quot;High__c&quot; and &quot;Low__c&quot; fields on the Risk Grade Criteria object.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quantitative</fullName>
                <default>true</default>
                <label>Quantitative</label>
            </value>
            <value>
                <fullName>Qualitative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>